--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: #f0f0f0;
   margin: 3rem 6rem;
 }
 
@@ -16,7 +16,6 @@ header {
   padding: 1rem 0.2rem;
   justify-content: center;
 }
-
 .header1 {
   display: flex;
   align-items: center;
@@ -36,11 +35,13 @@ main {
   justify-content: center;
   flex-wrap: wrap;
 }
+
 .card {
   width: 33.33%;
   display: flex;
-  align-items: center;
   justify-content: center;
+  transition: all 1s ease-in-out;
+  cursor: pointer;
 }
 
 .card img {
@@ -63,40 +64,34 @@ main {
 .card5 {
   margin-top: 10rem;
 }
-.card1 .job {
+
+.job {
   transform: rotate(90deg);
   position: absolute;
+}
+
+.card1 .job {
   right: -50px;
   top: 70px;
 }
-.card2 .job {
-  transform: rotate(90deg);
-  position: absolute;
-  right: -40px;
-  top: 60px;
-}
 
+.card2 .job {
+  right: -40px;
+  top: 55px;
+}
 .card3 .job {
-  transform: rotate(90deg);
-  position: absolute;
   right: -25px;
   top: 45px;
 }
 .card4 .job {
-  transform: rotate(90deg);
-  position: absolute;
   right: -35px;
   top: 55px;
 }
 .card5 .job {
-  transform: rotate(90deg);
-  position: absolute;
   right: -30px;
   top: 45px;
 }
 .card6 .job {
-  transform: rotate(90deg);
-  position: absolute;
   right: -30px;
   top: 45px;
 }
@@ -104,19 +99,19 @@ main {
 .name {
   margin-top: 1.5rem;
 }
+
 .card:hover {
-  transition: all 1s;
   transform: scale(115%);
 }
 
 .card:hover img {
-  transition: box-shadow 1s;
+  transition: box-shadow 1s ease-in-out;
   box-shadow: 2px 2px 20px rgb(21, 10, 229);
 }
+
 @media screen and (max-width: 1090px) {
   header {
     flex-direction: column;
-    /* width: 100%; */
     align-items: center;
   }
 
@@ -129,7 +124,6 @@ main {
     width: 100%;
     margin-bottom: -1rem;
   }
-
   .card {
     width: 50%;
   }
@@ -137,12 +131,14 @@ main {
   .card1,
   .card3,
   .card5 {
-    margin-top: 0px;
+    margin-top: 0;
+    margin-bottom: 1rem;
   }
 
   .card2,
   .card4,
   .card6 {
+    margin-top: 0;
     margin-top: 7rem;
   }
 }
@@ -168,7 +164,6 @@ main {
     margin-top: 0;
     margin-bottom: 4rem;
   }
-
   .header2 {
     padding-left: 3rem;
   }
